# Compiler

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
examples/: factorial.lang  hello.lang
src/: CMakeLists.txt  driver.cpp
src/codegen/: codegen.h  llvm_backend.cpp  x86_emitter.cpp
src/common/: diag.cpp  diag.h  util.h
src/frontend/: ast.cpp  ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h  sema.cpp  sema.h
src/ir/: cfg.h  ssa.h  tir.h
src/passes/: pass_manager.h
tools/: irviz.cpp
